--- a/templates/dashboard/layout.html.twig
+++ b/templates/dashboard/layout.html.twig
@@ -14,7 +14,7 @@
     {% block stylesheets %}{% endblock %}
     {% block importmap %}{{ importmap('app') }}{% endblock %}
 </head>
-<body class="bg-light">
+<body style="background: linear-gradient(160deg, #faf5ff 0%, #eef2ff 50%, #f0e6ff 100%); min-height:100vh;">
 
 <div class="container-fluid">
     <div class="row" style="min-height: 100vh;">
