--- a/templates/dashboard/medecin/rdvs/medecin.rdvs.html.twig
+++ b/templates/dashboard/medecin/rdvs/medecin.rdvs.html.twig
@@ -80,12 +80,14 @@
                                     </button>
                                 </form>
                             {% endif %}
-                            
+                                                            {% if rdv.etat != 'confirmé' %}
+
                                 <form method="post" action="{{ path('medecin_delete_rdv', {'id': rdv.id}) }}" style="display:inline" onsubmit="return confirm('Voulez-vous vraiment supprimer ce RDV ?');">
                                     <button class="btn btn-danger btn-sm ms-1" title="Supprimer">
                                         <i class="bi bi-x-lg"></i>
                                     </button>
                                 </form>
+                            {% endif %}
 
                         </td>
                     </tr>
